Fix profile image whitespace

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -426,6 +426,7 @@ h4,
   border-radius: 100%;
   -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
           box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+  vertical-align: bottom;
 }
 
 /**
