--- a/assets/sass/utilities/_profile.scss
+++ b/assets/sass/utilities/_profile.scss
@@ -2,4 +2,5 @@
     display: inline-block;
     border-radius: 100%;
     box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+    vertical-align: bottom;
 }
